[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Kate <eskamaeva@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^3.3.1"
dearpygui = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
